<resources>
    <string name="basicinfo">基本信息</string>
    <string name="username">用户名</string>
    <string name="phonenumber">手机号</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="school">学校</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="app_name">Wishes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_wishes">已摘心愿</string>
    <string name="nav_item_message">我的消息</string>
    <string name="mess">消息</string>
    <string name="password_digit">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ </string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_message">我的消息</string>
    <string name="title_wishes">已收消息</string>
    <string name="title_section1">心愿墙</string>
    <string name="title_section2">消息</string>
    <string name="title_section3">我的</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="pull_listview_tap_label">点击刷新...</string>
    <string name="pull_listview_pull_label">下拉刷新...</string>
    <string name="pull_listview_release_label">松开刷新...</string>
    <string name="pull_listview_refreshing_label">正在加载...</string>
    <string name="delete">删除</string>
    <string name="receive_the_passthrough">收到透传：action：</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="unable_to_get_loaction">获取不到位置信息</string>
    <string name="no_more_messages">暂无新消息</string>
    <string name="cant_find_pictures">图片不存在</string>
    <string name="file_does_not_exist">文件不存在</string>
    <string name="the_file_is_not_greater_than_10_m">文件不能超过10M</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="send_fail">发送失败</string>
    <string name="connect_failuer_toast">网络连接失败</string>
    <string name="confirm_resend">确认重发</string>
    <string name="resend">重发</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="expression">[表情]</string>
    <string name="Removed_from_the_failure">移出失败</string>
    <string name="be_removing">正在移出...</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>
    <string name="the_current_group">当前群聊已被群创建者解散</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="deleting">正在删除...</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="Log_uploaded_successfully">日志上传成功</string>
    <string name="Log_Upload_failed">log上传失败</string>
    <string name="get_failed_please_check">获取失败,请检查网络或稍后再试</string>
    <string name="people">人)</string>
    <string name="being_added">正在添加...</string>
    <string name="is_quit_the_group_chat">正在退出群聊...</string>
    <string name="chatting_is_dissolution">正在解散群聊...</string>
    <string name="are_empty_group_of_news">正在清空群消息...</string>
    <string name="is_modify_the_group_name">正在修改群名称...</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="change_the_group_name_failed_please">改变群名称失败，请检查网络或稍后重试</string>
    <string name="Are_moving_to_blacklist">正在移入至黑名单</string>
    <string name="failed_to_move_into">移入黑名单失败,请检查网络或稍后重试</string>
    <string name="Exit_the_group_chat_failure">退出群聊失败:</string>
    <string name="Dissolve_group_chat_tofail">解散群聊失败:</string>
    <string name="Add_group_members_fail">添加群成员失败:</string>
    <string name="Is_unblock">正在解除屏蔽...</string>
    <string name="remove_group_of">解除群屏蔽失败，请检查网络或稍后重试</string>
    <string name="group_is_blocked">正在屏蔽群组...</string>
    <string name="group_of_shielding">群屏蔽失败，请检查网络或稍后重试</string>
    <string name="sure_to_empty_this">确定清空此群的聊天记录吗？</string>
    <string name="The_delete_button_is_clicked">删除按钮被点击</string>
    <string name="Add_a_button_was_clicked">添加按钮被点击</string>
    <string name="not_delete_myself">不能删除自己</string>
    <string name="Are_removed">正在移除...</string>
    <string name="confirm_the_members">确认将此成员加入至此群黑名单?</string>
    <string name="Failed_to_get_group_chat_information">获取群聊信息失败:</string>
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="Request_to_join">请求加入</string>
    <string name="send_the_request_is">发送请求成功，等待群主同意</string>
    <string name="Join_the_group_chat">加入群聊成功</string>
    <string name="Failed_to_join_the_group_chat">加入群聊失败:</string>
    <string name="temporary_does_not">暂不支持大于10M的视频！</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="please_set_the_current">设置当前用户的昵称\n用于ios离线推送时显示用户昵称</string>
    <string name="Is_landing">正在登录...</string>
    <string name="list_is_for">将在后台获取好友和群聊列表...</string>
    <string name="login_failure_failed">登录失败: 获取好友或群聊失败</string>
    <string name="Login_failed">登录失败:</string>
    <string name="have_you_removed">已把你从他好友列表里移除</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="Remove_the_notification">移除通知</string>
    <string name="Group_name_cannot_be_empty">群组名称不能为空</string>
    <string name="Is_to_create_a_group_chat">正在创建群聊...</string>
    <string name="Failed_to_create_groups">创建群组失败:</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Confirm_password_cannot_be_empty">确认密码不能为空!</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="Is_the_registered">正在注册...</string>
    <string name="Registered_successfully">注册成功</string>
    <string name="network_anomalies">网络异常，请检查网络！</string>
    <string name="User_already_exists">用户已存在！</string>
    <string name="registration_failed_without_permission">注册失败，无权限！</string>
    <string name="Registration_failed">注册失败:</string>
    <string name="Are_logged_out">正在退出登录..</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="Version_number_is_wrong">版本号错误</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="In_the_call">通话中...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Have_downloaded">已下载</string>
    <string name="Did_not_download">未下载</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Apply_to_the_group_of">申请加入群：</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="search_new">搜</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="voice">声音</string>
    <string name="not_download">未下载:</string>
    <string name="ok">确定</string>
    <string name="login_phonedescription">请输入手机号</string>
    <string name="login_login">登录</string>
    <string name="login_phone">手机号</string>
    <string name="login_password">密码\u0020\u0020\u0020\u0020</string>
    <string name="login_passDescription">输入密码</string>
    <string name="resetpass_phone">手机号 </string>
    <string name="resetpass_phonedescription">请输入手机号</string>
    <string name="resetpass_newpass">密码</string>
    <string name="resetpass_getcaptcha">获取验证码</string>
    <string name="resetpass_captcha">验证码</string>
    <string name="resetpass_sure">确认</string>
    <string name="register_phone">手机号</string>
    <string name="register_phonedescription">请输入手机号</string>
    <string name="register_passworddescription">请输入密码(最少6位)</string>
    <string name="register_captcha">验证码</string>
    <string name="register_password">密码</string>
    <string name="register_next">下一步</string>
    <string name="register_school">学校</string>
    <string name="register_schooldescription">选择学校</string>
    <string name="register_nickname">昵称</string>
    <string name="register_nicknamedescription">输入昵称</string>
    <string name="register_sex">性别</string>
    <string name="register_sex_man">男</string>
    <string name="register_sex_women">女</string>
</resources>