<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tongjo.girlswish.ui.MyInfoEditActivity" >

    <ImageView
        android:id="@+id/iv_myinfo_personico"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/addavatar" />

    <LinearLayout
        android:id="@+id/linerlayout_myinfo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/register_sex"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/rg_myinfo_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_myinfo_men"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:text="@string/register_sex_man" />

                <RadioButton
                    android:id="@+id/rb_myinfo_women"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:text="@string/register_sex_women" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >
			
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/register_nickname" />

            <EditText
                android:id="@+id/et_myinfo_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:background="@null"
                android:hint="@string/register_nicknamedescription" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/register_school"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_myinfo_school"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:background="@null"
                android:hint="@string/register_schooldescription"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_myinfo_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_bg_button_sure"
        android:gravity="center"
        android:text="@string/register_next"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</LinearLayout>