<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tongjo="http://schemas.android.com/apk/res/com.tongjo.girlswish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_fragme_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_160"
        android:layout_alignParentTop="true"
        android:background="@color/red" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/margin_100"
            android:layout_height="@dimen/margin_100"
            android:layout_centerInParent="true"
            android:src="@drawable/testimg" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_fragme_main"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="vertical" >

        <com.tongjo.girlswish.widget.ButtonWithArrow
            android:id="@+id/userbasicinfo_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_transparent"
            tongjo:iconvisiable="visiable"
            tongjo:lefttextValue="@string/nickname"
            tongjo:righttextValue="@string/nickname" />

        <com.tongjo.girlswish.widget.ButtonWithArrow
            android:id="@+id/userbasicinfo_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_transparent"
            tongjo:iconvisiable="visiable"
            tongjo:lefttextValue="@string/sex"
            tongjo:righttextValue="@string/sex" />

        <com.tongjo.girlswish.widget.ButtonWithArrow
            android:id="@+id/userbasicinfo_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_transparent"
            tongjo:iconvisiable="visiable"
            tongjo:lefttextValue="@string/school"
            tongjo:righttextValue="@string/school" />

        <com.tongjo.girlswish.widget.ButtonWithArrow
            android:id="@+id/userbasicinfo_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_transparent"
            tongjo:iconvisiable="visiable"
            tongjo:lefttextValue="@string/phonenumber"
            tongjo:righttextValue="@string/phonenumber" />
    </LinearLayout>
<Button
    android:id="@+id/exit" 
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_60"
    android:layout_alignParentBottom="true"
    android:layout_margin="@dimen/margin_10"
    android:text="@string/exit"
    />
</RelativeLayout>