<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.tongjo.girlswish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tongjo.girlswish.ui.ResetPassActivity" >

    <ImageView
        android:id="@+id/iv_resetpass_logo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:background="@drawable/logofour" />

    <LinearLayout
        android:id="@+id/linerlayout_resetpass_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/resetpass_phone" />

            <EditText
                android:id="@+id/et_resetpass_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:digits="0123456789"
                android:hint="@string/resetpass_phonedescription"
                android:inputType="number"
                android:maxLength="11" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/resetpass_newpass" />

            <EditText
                android:id="@+id/et_resetpass_newpass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="新密码" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp" >

            <View
                android:id="@+id/view11"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/bt_resetpass_getcaptcha"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:text="@string/resetpass_getcaptcha" />

            <EditText
                android:id="@+id/et_resetpass_captcha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/bt_resetpass_getcaptcha"
                android:layout_toRightOf="@id/view11"
                android:background="@null"
                android:hint="@string/resetpass_captcha" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_resetpass_sure"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_bg_button_sure"
        android:gravity="center"
        android:text="@string/resetpass_sure"
        android:textColor="@color/white" />

</LinearLayout>