<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.tongjo.girlswish"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="com.tongjo.girlswish.ui.RegisterActivity" >

        <ImageView
            android:id="@+id/iv_register_personico"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logothree" />

        <LinearLayout
            android:id="@+id/linerlayout_register_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_login"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/register_phone" />

                <EditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/register_phonedescription"
                    android:inputType="phone"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/register_password" />

                <EditText
                    android:id="@+id/et_register_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/register_passworddescription" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/bt_register_getcaptcha"
                    android:layout_width="115dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="获取验证码"
                    android:textColor="@color/register_getcaptcha_textcolor" />

                <EditText
                    android:id="@+id/et_register_captcha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/bt_register_getcaptcha"
                    android:background="@null"
                    android:hint="@string/register_captcha"
                    android:inputType="phone" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_register_sure"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_bg_button_sure"
            android:gravity="center"
            android:text="@string/register_next"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

</ScrollView>