<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.tongjo.girlswish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.tongjo.girlswish.LoginActivity" >

    <ImageView
        android:id="@+id/iv_login_personico"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logotwo" 
        android:scaleType="center"/>

    <LinearLayout
        android:id="@+id/linerlayout_login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login"
            android:layout_marginLeft="2px"
            android:layout_marginRight="2px"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/login_phonedescription" />

                <EditText
                    android:id="@+id/et_login_name"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/login_phone"
                    android:inputType="number"
                    android:maxLength="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/login_passDescription" />

                <EditText
                    android:id="@+id/et_login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:hint="@string/login_password"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_login_sure"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/selector_bg_button_sure"
            android:gravity="center"
            android:text="@string/login_login"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <com.tongjo.girlswish.widget.LinkTextView
                android:id="@+id/ltv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                app:clickcolor="@color/red"
                app:linktext="新用户注册" />

            <com.tongjo.girlswish.widget.LinkTextView
                android:id="@+id/ltv_login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:clickcolor="@color/red"
                app:linktext="忘记密码" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>